<resources>
    <string name="app_name">GitDroid</string>
    <string name="home">Home</string>
    <string name="favorites">Favorites</string>
    <string name="settings">Settings</string>
    <string name="preferences">Preferences</string>
    <string name="info">Info</string>
    <string name="search_hint">Search User</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="username">username</string>
    <string name="type">type</string>
    <string name="avatar">Avatar</string>
    <string name="total_fav">20</string>
    <string name="users">Users</string>
    <string name="back_button">Back Button</string>
    <string name="header">header</string>
    <string name="followers">Followers</string>
    <string name="following">Following</string>
    <string name="public_repos">Public Repos</string>
    <string name="no_data">No Data</string>

    <string name="language">Language</string>
    <string name="language_summary">Change app language</string>
    <string name="reminder">Daily Reminder</string>
    <string name="reminder_key">daily_reminder</string>
    <string name="reminder_summary_on">Daily reminder: ON</string>
    <string name="reminder_summary_off">Daily reminder: OFF</string>
    <string name="about">About App</string>

    <!-- Preference Titles -->
    <string name="messages_header">Messages</string>
    <string name="sync_header">Sync</string>

    <!-- Messages Preferences -->
    <string name="signature_title">Your signature</string>
    <string name="reply_title">Default reply action</string>

    <!-- Sync Preferences -->
    <string name="sync_title">Sync email periodically</string>
    <string name="attachment_title">Download incoming attachments</string>
    <string name="attachment_summary_on">Automatically download attachments for incoming emails
    </string>
    <string name="attachment_summary_off">Only download attachments when manually requested</string>
    <string name="no_follower">This user is not followed by anyone</string>
    <string name="no_following">This user is not following anyone</string>
</resources>